# python_projects_grocery_webapp

backend/: pyproject.toml  server.py  sql_connection.py
