[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Leocodeio <basicleo787@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
